# lct4_dorateam24

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  __main__.py  app.py  dto.py  models.py  settings.py
backend/dependencies/: colors.py  kafka_consumer.py  redis_con.py  token.py
backend/services/: areas_service.py  layer_service.py
backend/utils/: db.py  wrappers.py
backend/views/: __init__.py  areas.py  auth.py  crossing_territories_filters.py  debug.py  layers.py  navigation_fiilters.py
data/: Thumbs.db  _17_Приказ Росреестра от 10.11.2020 N П_0412 (ред. от 23.06.2022.rtf
data/_10_Округ, район/: округ.xml  район.xml
data/_11_Участки межевания жилых кварталов/: участки_межевания.shp.xml
data/_13_ППТ/: PPT_ALL.shp  PPT_ALL.shp.xml  PPT_UDS.shp.xml  PP_GAZ.shp  PP_GAZ.shp.xml  PP_METRO_ALL.shp  PP_METRO_ALL.shp.xml  TPU_RV_METRO_Polygon.shp.xml  kvartal_region.shp.xml
data/_15_МКД/: МКД.shx
data/_1_ЗУ/: ЗУ.shp.xml
data/_3_ЗОУИТ/: ZOUIT.shp.xml
data/_5_УДС/: УДС_дороги.shp.xml  УДС_мосты.shp.xml
data/_7_ПЗЗ (территориальные зоны)/: TZ_new.shp  TZ_new.shp.xml
data/_8_ПЗЗ (территориальные подзоны)/: TPZ_new.shp.xml
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: index.js
psql_data/base/1/: 1247  1247_vm  1249_vm  1259  13373  13373_vm  13378  13383_vm  13388  2603_vm  2606  2608_vm  2612  (+28 more)
psql_data/global/: 1213_vm  1260  1260_vm  1261  1261_vm  1262  2396  2396_vm  2397  2671  2672  2676  2964  2965  pg_control
psql_data/pg_stat/: pgstat.stat
(+707 files in other folders)
