[tool.poetry]
name = "lct4-dorateam24"
version = "0.1.0"
description = ""
authors = ["dorateam"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.111.0"}
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
requests = "^2.32.3"
ruff = "^0.4.10"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
